docs: standardize install/run, add upgrade command, fix async DB patterns
- Replace all bunx/npx patterns with canonical 'smithers' command
- Add 'smithers upgrade' command with auto-detection of package manager
- Add 'smithers serve' command for MCP server
- Fix all async DB patterns to be synchronous (await db.* → db.*)
- Add PATH note for ~/.bun/bin after install
- Add canonical Ralph Wiggum loop definition
- Add upgrade section to quickstart and debugging docs
- Fix missing versionId in SuperSmithers storeVersion call
- Fix storeVersion tests to pass versionId as required param

--- a/docs/components/commit.mdx
+++ b/docs/components/commit.mdx
@@ -65,7 +65,7 @@ interface CommitResult {
 Commits are logged:
 
 ```tsx
-const commits = await db.vcs.getCommits(10);
+const commits = db.vcs.getCommits(10);
 // [{ hash: "abc123", message: "feat: Add feature", ... }]
 ```
 
