--- a/docs/guides/debugging.mdx
+++ b/docs/guides/debugging.mdx
@@ -65,6 +65,16 @@ if (incomplete) executionId = incomplete.id;
 | `tasks` | Async tracking |
 | `agents` | Agent logs |
 
+## Upgrade
+
+If issues persist, try upgrading to the latest version:
+
+```bash
+smithers upgrade
+```
+
+---
+
 ## Related
 
 <CardGroup cols={2}>
