docs: fix complete→completed status vocabulary consistency

--- a/docs/api-reference/conventions.mdx
+++ b/docs/api-reference/conventions.mdx
@@ -24,7 +24,7 @@ ISO 8601 strings in SQLite. Some modules map to `Date`:
 
 ## Status Vocabulary
 
-Common: `pending`, `running`, `complete`, `failed`, `cancelled`
+Common: `pending`, `running`, `completed`, `failed`, `cancelled`
 
 Module-specific:
 - Phases/Steps: `skipped`
