--- a/docs/components/phase.mdx
+++ b/docs/components/phase.mdx
@@ -107,7 +107,7 @@ Phases advance when all Steps complete. Only the active phase renders children.
 
 ```tsx
 const phases = db.phases.list(executionId);
-// [{ id: "p1", name: "Research", status: "complete" }, ...]
+// [{ id: "p1", name: "Research", status: "completed" }, ...]
 ```
 
 ## Related
