--- a/docs/components/step.mdx
+++ b/docs/components/step.mdx
@@ -81,7 +81,7 @@ VCS operations fail gracefully. If JJ is unavailable, a warning is logged but th
 
 ```tsx
 const steps = db.steps.getByExecution(executionId);
-// [{ id: "s1", name: "Create API", status: "complete" }, ...]
+// [{ id: "s1", name: "Create API", status: "completed" }, ...]
 ```
 
 ## Related
