--- a/docs/components/step.mdx
+++ b/docs/components/step.mdx
@@ -18,6 +18,10 @@ Individual task within a Phase. Steps execute sequentially.
 </Phase>
 ```
 
+<Note>
+Phase and Step components require `<Ralph>` or `<While>` for multi-iteration workflows. Without a loop wrapper, they execute once and stop. See [Ralph](/components/ralph).
+</Note>
+
 ## Props
 
 <ParamField path="name" type="string">
