docs: editorial polish for release quality
- Add disambiguation for Hooks component (not React hooks)
- Add Task naming collision warning (vs db.tasks)
- Add Worktree behavior details (Git requirement, cleanup warning)
- Remove internal-note style labels from renderer-architecture
- Fix smithers-provider task tracking example (return null)
- Add cross-link for db.state vs db.tasks in ralph-wiggum-loop

--- a/docs/components/hooks.mdx
+++ b/docs/components/hooks.mdx
@@ -7,6 +7,10 @@ description: Event-driven components that trigger on external events
 
 Event-driven components that trigger on CI failures, commits, and other external events.
 
+<Note>
+**Not React hooks.** Smithers Hooks are event-driven workflow components that trigger on external events (like CI failures). For React hooks, see [Lifecycle Hooks](/api-reference/lifecycle-hooks) and [Reactive Hooks](/api-reference/reactive-hooks).
+</Note>
+
 ## OnCIFailure
 
 Trigger on CI failure:
