--- a/docs/concepts/ralph-wiggum-loop.mdx
+++ b/docs/concepts/ralph-wiggum-loop.mdx
@@ -140,7 +140,7 @@ Using the `condition` prop is more explicit and recommended.
 
 ## State: db.state vs db.tasks
 
-Smithers has two state systems. Use the right one:
+Smithers has two state systems. Use the right one (note: [`<Task>`](/components/task) is presentational only—see below for runtime tracking):
 
 | API | Purpose | Example |
 |-----|---------|---------|
